--- a/DerivativeIntro.ipynb
+++ b/DerivativeIntro.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,8 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt   #helps us plot\n",
     "import numpy as np  #numpy python's numeric library\n",
-    "import sympy as sy  # sympy python's symbolic library"
+    "import sympy as sy  # sympy python's symbolic library\n",
+    "from sympy import oo"
    ]
   },
   {
@@ -1846,7 +1847,9 @@
   {
    "cell_type": "code",
    "execution_count": 549,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def f(x):\n",
@@ -2162,7 +2165,7 @@
     "\n",
     "   (a) What are the total box office receipts after the first month?  The second month? The third month? (Use what we have learned in notebooks 1 and 2 to do this easily)\n",
     "           \n",
-    "   (b)  What will the movie gross in the long run?"
+    "   (b)  What will the movie gross in the long run?  Interpret your results in words. "
    ]
   },
   {
@@ -2211,13 +2214,13 @@
     "## 3. \n",
     "DJ's Tires has determined that the weekly demand for tires is given by $$p=f(x)=144-x^2$$ where $p$, the price per tire, measured in dollars and $x$ is measured in units of 1000.  \n",
     "\n",
-    "   (a) Plot the demand function.  (I only want to see a plot with x values that make sense)\n",
+    "   (a) Plot the demand function.  (I only want to see a plot with x values that make sense)  Label your plots and axes\n",
     "    \n",
-    "   (b) Plot the differences of the demand function \n",
+    "   (b) Plot the differences of the demand function  \n",
     "    \n",
     "   (c) Find the average rate of change in the unit price of a tire if the quantity demanded is between 5000 and 6000 tires, 5000 and 5100 tires, and 5000 and 5010 tires. \n",
     "    \n",
-    "   (d) What is the instantaneous rate of change of the unit price when the quantity demanded is 5000 units?\n",
+    "   (d) What is the instantaneous rate of change of the unit price when the quantity demanded is 5000 units? Interpret your results in words. \n",
     "    "
    ]
   },
@@ -2235,7 +2238,7 @@
    "metadata": {},
    "source": [
     "## 4.\n",
-    "A company's quarterly profit (in thousands of dollars) is given by $$ P(x)= \\frac{1}{3}x^2+7x+30$$ when $x$ is between 0 and 50 inclusive and $x$ is the amount of money spend on advertising per quarter.\n",
+    "A company's quarterly profit (in thousands of dollars) is given by $$ P(x)= \\frac{1}{3}x^2+7x+30$$ when $x$ is between 0 and 50 inclusive and $x$ is the amount of money spend on advertising per quarter in thousands of dollars.  Label your plots and axes on all plots below. \n",
     "\n",
     "   (a) Plot the company's profit and the change in profit (differences) on two graphs beside each other\n",
     "    \n",
@@ -2260,7 +2263,7 @@
    "metadata": {},
    "source": [
     "## 5. \n",
-    "Find the equation of the tangent line for $f(x)=x^2-4x$. \n",
+    "Find the equation of the tangent line for $f(x)=x^2-4x$ when x= -12\n",
     "Hint we found the slope of the tangent line earlier but didn't write the whole equation, but you know how to write the equation of a line if you know the slope and a point it goes through. \n"
    ]
   },
@@ -2341,7 +2344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the trend for digital tvs shipped continued to now, how many would be shipped AND what would the rate of change be at this year?  Compare the number of units shipped to the "
+    "If the trend for digital tvs shipped continued to now, how many would be shipped AND what would the rate of change be at this year?  "
    ]
   },
   {
@@ -2459,11 +2462,6 @@
    "source": [
     "From the graph where does the rate of change seem to be the greatest?  "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
